<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="8dp">

    <TextView
        android:id="@+id/txtLoginHost"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="8dp"
        android:textColor="@color/text_secondary"
        android:textSize="13sp" />

    <EditText
        android:id="@+id/inputUser"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@color/surface"
        android:hint="@string/smb_username"
        android:inputType="text"
        android:padding="12dp"
        android:textColor="@color/white"
        android:textColorHint="@color/text_secondary" />

    <EditText
        android:id="@+id/inputPassword"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginTop="8dp"
        android:background="@color/surface"
        android:hint="@string/smb_password"
        android:inputType="textPassword"
        android:padding="12dp"
        android:textColor="@color/white"
        android:textColorHint="@color/text_secondary" />

    <CheckBox
        android:id="@+id/chkAnonymous"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/smb_anonymous"
        android:textColor="@color/white" />

    <CheckBox
        android:id="@+id/chkRemember"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:checked="true"
        android:text="@string/smb_remember"
        android:textColor="@color/white" />
</LinearLayout>
